# champinium

./: .gitattributes  .gitignore  .intendant.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  release-please-config.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-artifacts.yml  release-please.yml
apps/linux/: Cargo.toml  README.md  SPEC.md
apps/linux/src/: gui.rs  main.rs
apps/macos/: .swiftformat  Package.swift  README.md  SPEC.md
apps/macos/Sources/Champinium/: ChampiniumApp.swift  ContentView.swift  NodeModel.swift  main.swift
apps/windows/: .editorconfig  Champinium.sln  README.md  SPEC.md
apps/windows/Champinium/: App.xaml  App.xaml.cs  Champinium.csproj  Converters.cs  LocalSettings.cs  MainWindow.xaml  MainWindow.xaml.cs  NodeViewModel.cs  Package.appxmanifest  app.manifest
crates/bootstrap/: Cargo.toml
crates/champinium-cli/: Cargo.toml
crates/champinium-cli/src/: main.rs
crates/champinium-core/: Cargo.toml  SPEC.md  uniffi.toml
crates/champinium-core/src/: blockstore.rs  catalog.rs  channel_link.rs  content.rs  error.rs  feed.rs  ffi.rs  identity.rs  ingest.rs  lib.rs  moderation.rs  p2p.rs  paths.rs  relay.rs  report.rs  seeding.rs
crates/champinium-core/src/coldstore/: arweave.rs  arweave_tx.rs  mod.rs  receipts.rs
crates/champinium-core/tests/: catalog_events.rs  channel_preview.rs  channel_profile.rs  coldstore.rs  corruption.rs  feed_dht.rs  feed_durability.rs  feed_gossip.rs  feed_seq.rs  fetch_hls.rs  ingest.rs  key_moderation.rs  moderation.rs  p2p_transfer.rs  proactive_seed.rs  relay.rs  replication.rs  reports.rs  search.rs  seeding.rs  subscriptions.rs
crates/champinium-seed/: Cargo.toml
crates/champinium-seed/src/: main.rs
deny/: README.md  default-denylist.example.json  default-denylist.json  default.cids
docs/: README.md  architecture.md  deploy-bootstrap-relay.md  gui-demo.md  mvp-demo.md  packaging.md  phase1-demo.md
docs/adr/: 0000-record-architecture-decisions.md  0001-libp2p-over-iroh.md  0002-node-side-moderation.md  0003-signed-feeds-gossip-and-dht.md  0004-conventional-commits-strict.md  0005-release-please.md  0006-block-transport.md  0007-ipns-deferred.md  0008-cold-storage-arweave.md
infra/: SPEC.md
infra/bootstrap/: Cargo.toml
infra/bootstrap/src/: main.rs
infra/relay/: Cargo.toml
infra/relay/src/: main.rs
infra/services/: README.md  champinium-seed.service  com.champinium.seed.plist
packaging/flatpak/: org.champinium.Champinium.desktop  org.champinium.Champinium.metainfo.xml  org.champinium.Champinium.yml
scripts/: package-linux-app.sh  package-macos-app.sh
