[package]
name = "champinium-linux"
description = "Front Linux natif (GTK4 / gtk-rs). Présentation uniquement — consomme champinium-core en direct."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "champinium"
path = "src/main.rs"

[features]
default = []
# Interface GTK4 + lecture GStreamer. Requiert les libs système GTK4 et
# GStreamer. Gardée derrière une feature pour que `cargo build` du workspace
# reste vert sur les machines sans ces dépendances (ex. CI macOS).
gui = ["dep:gtk", "dep:gstreamer", "dep:tokio"]

[dependencies]
champinium-core.workspace = true
gtk = { package = "gtk4", version = "0.9", optional = true }
gstreamer = { version = "0.23", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
