[package]
name = "champinium-cli"
description = "Outil de debug en ligne de commande pour le noyau Champinium (Phase 1+)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
champinium-core.workspace = true
