[package]
name = "champinium-core"
description = "Noyau Rust partagé de Champinium (P2P, content-addressing, modération), exposé aux fronts via UniFFI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# cdylib : pour le chargement par les fronts (Swift/C#) + génération de bindings
#          en library-mode. lib : pour la consommation directe par GTK (Rust).
crate-type = ["cdylib", "lib"]
name = "champinium_core"

[[bin]]
# Binaire de génération des bindings (library-mode UniFFI).
# Utilisé par le justfile : `cargo run --bin uniffi-bindgen -- generate ...`.
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
# Stockage froid optionnel (Arweave, ADR 0008) — aucune dep supplémentaire
# tirée par défaut. Décision supply-chain : voir
# .superpowers/sdd/coldstore-decision.md (hand-roll de la signature Arweave,
# reqwest = seul ajout, pour l'upload/GraphQL de découverte).
cold-storage = ["dep:reqwest"]

[dependencies]
uniffi = { workspace = true, features = ["cli", "tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "fs", "io-util", "process"] }
tempfile = "3"
futures = "0.3"
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "kad", "identify", "ping", "request-response", "cbor", "gossipsub", "relay", "dcutr", "macros"] }
cid = "0.11"
multihash = "0.19"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
