[package]
name = "champinium-core"
description = "Noyau Rust partagé de Champinium (P2P, content-addressing, modération), exposé aux fronts via UniFFI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# cdylib : pour le chargement par les fronts (Swift/C#) + génération de bindings
#          en library-mode. lib : pour la consommation directe par GTK (Rust).
crate-type = ["cdylib", "lib"]
name = "champinium_core"

[[bin]]
# Binaire de génération des bindings (library-mode UniFFI).
# Utilisé par le justfile : `cargo run --bin uniffi-bindgen -- generate ...`.
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
# Stockage froid optionnel (Arweave, ADR 0008) — aucune dep supplémentaire
# tirée par défaut. Décision supply-chain : voir
# .superpowers/sdd/coldstore-decision.md (hand-roll de la signature Arweave,
# reqwest = seul ajout, pour l'upload/GraphQL de découverte).
cold-storage = ["dep:reqwest", "dep:async-trait", "dep:rsa", "dep:getrandom"]

[dependencies]
uniffi = { workspace = true, features = ["cli", "tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "fs", "io-util", "process"] }
tempfile = "3"
futures = "0.3"
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "kad", "identify", "ping", "request-response", "cbor", "gossipsub", "relay", "dcutr", "macros"] }
cid = "0.11"
multihash = "0.19"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
# Désacharnement (« type erasure ») pour le trait `ColdStore` : nécessaire pour
# rester dyn-compatible malgré des méthodes async (edition 2021 — les async fn
# natives en trait ne sont pas dyn-compatibles). Gaté par la même feature.
async-trait = { version = "0.1", optional = true }
# Signature RSA-PSS des transactions Arweave (hand-roll, cf. coldstore-decision).
# rsa 0.10 (ligne RustCrypto digest 0.11, alignée sur notre `sha2 = "0.11"`) :
# la 0.9 stable est signalée par RUSTSEC-2023-0071 (Marvin, sans correctif) et
# ferait échouer `cargo deny` — la 0.10 porte la mitigation Marvin. Gaté par la
# même feature `cold-storage`.
rsa = { version = "0.10.0-rc.18", optional = true }
# RNG système pour le sel RSA-PSS (signeur *aveuglé*, mitigation Marvin). SysRng
# (getrandom) implémente `TryCryptoRng` de rand_core 0.10 — aucune graine gérée
# par nous. Gaté par la même feature `cold-storage`.
getrandom = { version = "0.4", features = ["sys_rng"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
# Serveur HTTP mock pour les tests coldstore (gateways Arweave simulées).
# httpmock écarté : dépendance non optionnelle sur async-std (discontinué,
# RUSTSEC-2025-0052) — fait échouer `cargo deny check`. wiremock (base tokio,
# cohérente avec le reste du workspace) est cargo-deny-clean.
wiremock = "0.6"
