[package]
name = "champinium-seed"
description = "Démon de seeding en arrière-plan (hors UI) : réannonce et ressert le contenu détenu."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "champinium-seed"
path = "src/main.rs"

[dependencies]
champinium-core.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
