[package]
name = "champinium-bootstrap"
description = "Nœud de rendez-vous initial SANS ÉTAT. Multipliable trivialement par un tiers."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "champinium-bootstrap"
path = "src/main.rs"

[dependencies]
champinium-core.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
